# pcap2har

./: .gitignore  README.md  capture_packets.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
pcap2har/: __init__.py  main.py
src/: __init__.py  main.py
tests/: __init__.py  common.py  test_http.py  test_http2.py  test_http3.py  test_main.py  test_websocket.py
tests/goldens/: test_http.py-test_chunked_gzip  test_http2.py-test_firefox_tls13  test_http2.py-test_http2_parse  test_http3.py-test_http3_parse  test_websocket.py-test_http2_parse  test_websocket.py-test_websocket_segmented
tests/resources/: firefox-tls13-facebook-dsb.pcapng  http2-dump.pcap  http3-connection7.pcap
wireshark/: Dockerfile  build_linux.sh
