[project]
name = "pcap2har"
version = "0.1.0"
description = "A Python project for converting PCAP files to HAR (HTTP Archive) format"
authors = [
    {name = "Mike Kaplinskiy", email = "mike.kaplinskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "pyshark>=0.6.0",
    "click>=8.1.0",
    "brotli>=1.1.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-goldie>=0.1.5",
]
